--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,7 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
 
     implementation "androidx.navigation:navigation-compose:2.7.1"
+    implementation("io.coil-kt:coil-compose:2.0.0-rc01")
 
     //Lottie Dependency
     implementation("com.airbnb.android:lottie-compose:4.2.0")
